Add maven testing config to scratch project to allow access via modules system