@@ -1,6 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
@@ -27,7 +25,6 @@
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/com.google.collections/google-collections -->
-
 
 
 		<!-- https://mvnrepository.com/artifact/org.yaml/snakeyaml -->
@@ -81,6 +78,24 @@
 					<target>1.8</target>
 				</configuration>
 			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.0.0-M5</version>
+				<configuration>
+					<argLine>--illegal-access=permit</argLine>
+					<argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
+					<argLine>--add-opens java.base/java.math=ALL-UNNAMED</argLine>
+					<argLine>--add-opens java.base/java.util=ALL-UNNAMED</argLine>
+					<argLine>--add-opens java.base/java.util.concurrent=ALL-UNNAMED</argLine>
+					<argLine>--add-opens java.base/java.net=ALL-UNNAMED</argLine>
+					<argLine>--add-opens java.base/java.text=ALL-UNNAMED</argLine>
+					<argLine>--add-opens java.sql/java.sql=ALL-UNNAMED</argLine>
+					<argLine>-Dillegal-access=permit</argLine>
+				</configuration>
+			</plugin>
+
 			<plugin>
 				<artifactId>maven-assembly-plugin</artifactId>
 				<version>3.1.0</version>
@@ -90,8 +105,7 @@
 					</outputDirectory>
 					<finalName>libscratch-${project.version}</finalName>
 					<appendAssemblyId>false</appendAssemblyId>
-					<archive>
-					</archive>
+					<archive></archive>
 					<descriptorRefs>
 						<descriptorRef>jar-with-dependencies</descriptorRef>
 					</descriptorRefs>
